# ChargeShield-FL

./: .gitignore  ChargeShield-FL_Decisions.txt  Dockerfile.flare  Dockerfile.node  Makefile  README.md  pyproject.toml  topology.clab.yml
config/: auditor.yaml  clusters.yaml  datasets.yaml  experiment.yaml  flare.yaml  framework.yaml  nodes.yaml  protocols.yaml
config/nodes/: cluster_corporate.yaml  cluster_highway.yaml  cluster_residential.yaml  cluster_urban.yaml
containerlab/: topology.clab.yml
containerlab/configs/: mosquitto.conf
docker/aggregator/: Dockerfile
docker/auditor/: Dockerfile
docker/charging-node/: Dockerfile
docker/fl-admin/: Dockerfile
docker/ids/: Dockerfile
docs/: Architecture.md  CaseStudies.md  DeveloperGuide.md  Documentation_Review.md  IDS.md  MLPlane.md  PrivacyAuditor.md  ProtocolAdapters.md  Research_Roadmap.md  Roadmap.md  Testing.md  ThreatModel.md
experiments/: experiment_20260626_161749.json  results_sweep.csv
nvflare/: project.yml
scripts/: compare_results.py  generate_certs.sh  generate_excel_report.py  run_experiments.py  run_sweep.py
src/adapters/: acn_dataset.py  elaadnl_dataset.py  elaadnl_datset.py  ocpp16_adapter.py
src/auditor/: privacy_auditor.py
src/core/: autoencoder.py  base_adapter.py  base_auditor.py  base_dataset.py  base_ids.py  base_node.py
src/flare/: flare_connector.py
src/ids/: base_ids.py  charging_ids.py
src/ml/: autoencoder_trainer.py  (+3 more)
tests/: test_acn_dataset.py  test_core_interfaces.py  test_flare_connector.py  test_privacy_auditor.py  test_sprint4.py  test_sprint5.py
(+3 files in other folders)
